# SimpleInfra

./: .gitignore  FEATURES_ROADMAP.md  ILLUMIO_FEATURES.md  ILLUMIO_INTEGRATION_COMPLETE.md  INFRASTRUCTURE_MODULES_COMPLETE.md  INTEGRATION_SUMMARY.md  IOT_MODULES_COMPLETE.md  LAUNCH_CHECKLIST.md  NETWORK_INTEGRATION_COMPLETE.md  NETWORK_MODULES_GUIDE.md  NETWORK_SEGMENTATION.md  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY_INTEGRATION_COMPLETE.md  SECURITY_TOOLS.md  TESTING_GUIDE.md  WEB3_GUIDE.md  WEB3_READY.md  pyproject.toml
docs/: index.html
examples/: advanced_usage.md  agentless_segmentation.si  app_dependency_mapping.si  dmz_setup.si  flow_analysis.si  full_deploy.si  hello_world.si  illumio_complete.si  local_webserver.si  multitenant_example.si  network_segmentation.si  policy_templates.si  quick_test.si  security_hardening.si  security_scan.si  showcase_features.si  web3_complete.si  web_server.si  zerotrust_example.si
src/simpleinfra/: __init__.py  __main__.py
src/simpleinfra/api/: client.py  server.py
src/simpleinfra/ast/: nodes.py
src/simpleinfra/cli/: app.py  output.py
src/simpleinfra/connectors/: base.py  local.py  ssh.py
src/simpleinfra/dsl/: grammar.lark  lexer.py  parser.py  transformer.py  validator.py
src/simpleinfra/engine/: context.py  executor.py  planner.py
src/simpleinfra/errors/: base.py  parse_errors.py  runtime_errors.py
src/simpleinfra/modules/: base.py  check.py  command.py  docker.py  file.py  firewall.py  git.py  package.py  registry.py  service.py  user.py  wait.py
src/simpleinfra/modules/infrastructure/: backup.py  (+9 more)
src/simpleinfra/security/: audit.py  rbac.py
src/simpleinfra/variables/: builtins.py  facts.py  resolver.py  secrets.py  vault.py
tests/: test_integration.py  test_parser_basic.py  test_security_scanner.py
(+18 files in other folders)
